js262/test/language/identifiers/val-debugger-via-escape-hex.js


/*---
es6id: 11.6
description: >
    SyntaxError expected: reserved words used as Identifier
    Names in UTF8: debugger
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var \u{64}ebugger = 123;
